[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.14.0"
rand = "0.8.0"
lazy_static = "1.4.0"

[dependencies.bevy]
# version = "0.9"
# git = "https://github.com/bevyengine/bevy"
# rev = "f7fbfaf9c72035e98c6b6cec0c7d26ff9f5b1c82"
git = "https://github.com/lewiszlw/bevy"
branch = "bump-async-channel"
features = [
    "bmp",
    "wav"
]